--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "should": "^9.0.2",
     "sinon": "^1.17.4",
     "supertest": "^1.2.0"
+  },
+  "dependencies": {
+    "node-simple-router": "^0.10.0",
+    "request-promise": "^3.0.0"
   }
 }
